# interop-aws-reporter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  OWNERS  README.md  pyproject.toml
aws_reporter/: app.py  utils.py
interop_aws_reporter/: app.py  log_aws_report.py  utils.py
